# mcp-host

./: Makefile  README.md  conftest.py  pyproject.toml
cli/: mcp_server_scaffold_cli.py  pyproject.toml
common/: pyproject.toml
common/tests/: test_decorator.py
runtime/: pyproject.toml
runtime/src/mcp_server/: config.py  config.yaml  config_loader.py  generic_mcp_server.py  logging_config.py  main.py  server.py  server_registry.py
runtime/tests/: test_config_loader.py  test_generic_mcp_server.py  test_logging_config.py  test_server.py  test_server_registry.py
servers/echo_server/: pyproject.toml
servers/echo_server/src/echo_server/: models.py  tools.py
servers/echo_server/tests/: test_echo_server.py
servers/mcp_echo_server/: pyproject.toml
servers/mcp_echo_server/src/mcp_echo_server/: models.py  tools.py
servers/mcp_echo_server/tests/: test_echo_server.py
servers/mcp_playwright_server/: pyproject.toml
servers/mcp_playwright_server/src/mcp_playwright_server/: browser_script.py  browser_tools.py  hello.py  main.py  models.py
servers/mcp_playwright_server/src/mcp_playwright_server/browser/: abstract_browser_tools.py
servers/mcp_playwright_server/src/mcp_playwright_server/browser/base/: abstract_browser_session.py
servers/mcp_playwright_server/src/mcp_playwright_server/browser/mock_json_browser/: json_browser_session.py
servers/mcp_playwright_server/src/mcp_playwright_server/browser/playwright_browser/: playwright_browser_session.py
servers/mcp_playwright_server/src/mcp_playwright_server/tools/: interaction_tools.py  navigation_tools.py  tab_management_tools.py
servers/mcp_playwright_server/tests/: test_browser_session.py
servers/mcp_telnet_client/: README.md  pyproject.toml
servers/mcp_telnet_client/src/mcp_telnet_client/: models.py  tools.py
servers/mcp_time_server/: pyproject.toml
servers/mcp_time_server/src/mcp_time_server/: models.py
servers/mcp_time_server/tests/: test_time_server.py
servers/time_server/: pyproject.toml
servers/time_server/src/time_server/: tools.py
servers/time_server/tests/: test_time_server.py
