[project]
name = "mcp-host"
version = "0.1.0"
description = "A flexible, modular Messaging Control Protocol (MCP) framework for building distributed, extensible tool and service ecosystems. Designed to simplify service discovery, tool registration, and inter-service communication through a lightweight, configurable hosting environment."
readme = "README.md"
requires-python = ">=3.11"

# Include all necessary dependencies
dependencies = [
    "mcp>=1.4.1",
    "pydantic>=2.10.6",
    "pyyaml>=6.0.2",
]

# Define your packages using inline tables so that an editable install picks up the correct source directories.
packages = [
  { include = "common", from = "common/src" },
  { include = "runtime", from = "runtime/src" },
  { include = "time_server", from = "servers/time_server/src" },
  { include = "echo_server", from = "servers/echo_server/src" }
]

[project.optional-dependencies]
dev = [
  "pytest-asyncio>=0.25.3",
  "pytest>=8.3.5",
]

[tool.uv.workspace]
members = ["common", "runtime", "cli"]

[tool.hatch.build.targets.wheel]
packages = ["common", "runtime", "time_server", "echo_server"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
minversion = "8.3.5"
testpaths = [
  "common/tests",
  "runtime/tests",
  "servers/time_server/tests",
  "servers/echo_server/tests",
]

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
mcp-server-scaffolder = "cli.mcp_server_scaffold_cli:app"