[project]
name = "mcp-time-server"
version = "0.1.0"
description = "Time server for MCP tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.4.1",
    "pydantic>=2.10.6",
    "pyz>=0.4.3",
]
packages = [
    { include = "mcp_time_server", from = "src" }
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"